--- a/Lecture 02/lecture2.ipynb
+++ b/Lecture 02/lecture2.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,14 +258,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dead_poets_society\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
     "\n",
+    "favouritemovie= 'dead_poets_society'\n",
     "\n",
-    "\n"
+    "print(favouritemovie)\n"
    ]
   },
   {
@@ -1030,7 +1039,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
