--- a/lecture_03/lecture_3.ipynb
+++ b/lecture_03/lecture_3.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,9 +74,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Computes \"pi\" (3.14...)\n",
     "\n",
@@ -97,9 +108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "2.718281828459045\n",
+      "0.8414709848078965\n",
+      "0.5403023058681398\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# log(x) computes the logarithm with base \"e\" (Euler constant)\n",
     "# exp(x) compute the Euler constant raised to the power of \"x\"\n",
@@ -111,7 +134,35 @@
     "print(np.exp(1))\n",
     "print(np.sin(1))\n",
     "print(np.cos(1))\n",
-    "print(np.sqrt(1))"
+    "print(np.sqrt(1))\n",
+    "print(np.log(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3695641294.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    <font size = '5'>\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "<font size = '5'>\n",
+    "\n",
+    "x ** 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Raising to the power of a number "
    ]
   },
   {
@@ -130,14 +181,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78.53981633974483\n",
+      "5.540487995575833e-12\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your own code\n",
+    "x = 5\n",
+    "print(np.pi * (x**2))\n",
     "\n",
-    "\n",
-    "\n",
+    "print( 1/np.sqrt(2*np.pi) * np.exp(-x**2))\n",
     "\n"
    ]
   },
@@ -166,13 +227,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# You create an array by converting a list [1,2,3] to a numeric object\n",
     "# \"array\" is a subfunction of the library numPy.\n",
-    "\n",
+    "vec_a = np.array([1,2,3,])\n",
     "vec_a  = np.array([1,2,3])\n",
     "vec_b  = np.array([0,1,0])\n",
     "vec_c  = np.array([10,100,1000,2000,5000])\n"
@@ -190,15 +251,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "# Arrays, like lists, start their numbering at zero.\n",
     "# You also access them with square brackets\n",
     "\n",
     "print(vec_a[0])\n",
-    "print(vec_a[2])\n"
+    "print(vec_a[2])\n",
+    "\n"
    ]
   },
   {
@@ -222,9 +293,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 4 6]\n",
+      "[0.5 1.  1.5]\n",
+      "[3 4 5]\n",
+      "[1 4 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# A scalar refers to either an int or float\n",
     "# We can do many common operations with \n",
@@ -252,9 +334,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "[0 1 0]\n"
+     ]
+    }
+   ],
    "source": [
     "print(vec_a)\n",
     "print(vec_b)"
@@ -262,9 +353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# When you add two arrays of the same size,\n",
     "# Python adds the individual elements in each position\n",
@@ -339,13 +438,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.4\n",
+      "7.939773296511683\n",
+      "0\n",
+      "10.0\n",
+      "24\n"
+     ]
+    }
+   ],
    "source": [
     "# Create your own array and compute any of the above summary statistics\n",
     "\n",
+    "e = np.array([10, 8, 15, 0, 24])\n",
     "\n",
+    "print(np.mean(e))\n",
+    "print(np.std(e))\n",
+    "print(np.min(e))\n",
+    "print(np.median(e))\n",
+    "print(np.max(e))\n",
     "\n",
     "\n",
     "\n"
@@ -362,9 +479,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "[  10  100 1000 2000 5000]\n"
+     ]
+    }
+   ],
    "source": [
     "print(vec_a)\n",
     "print(vec_c)"
@@ -372,18 +498,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vec_a.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (3,) (5,) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Here I try to combine two arrays of different size.\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m vec_a \u001b[38;5;241m+\u001b[39m vec_c\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,) (5,) "
+     ]
+    }
+   ],
    "source": [
     "# Here I try to combine two arrays of different size.\n",
     "\n",
@@ -717,7 +866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
